Rerfactor: remove TablePotential casts.